src/main/java/ru/test/simplifiedexchange/error/ErrorInfo.java
package ru.test.simplifiedexchange.error;

/**
 * @author Konstantin Kasyanov
 */
public interface ErrorInfo {

    String getMessage();

    int getCode();

}
